[package]
name = "hide-windows"
version = "1.0.1"
edition = "2021"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
]

[build-dependencies]
winresource = "0.1.17"
